# isitonline

./: .gitignore  Cargo.toml  Dockerfile  README.md
migrations/: 20231105013539_create.sql
src/: main.rs  tables.sql
static/: htmx-sse.min.js  htmx-ws.min.js  reset.min.css  style.css
templates/: base.html  index.html  issue.html  monitor.html  monitors.html
